Refactor compiles